--- a/packages/@textlint/linter-formatter/package.json
+++ b/packages/@textlint/linter-formatter/package.json
@@ -49,6 +49,7 @@
     "text-table": "^0.2.0"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/js-yaml": "^3.12.10",
     "@types/lodash": "^4.17.0",
     "@types/mocha": "^9.1.1",
