--- a/packages/@textlint/text-to-ast/package.json
+++ b/packages/@textlint/text-to-ast/package.json
@@ -51,6 +51,7 @@
         "eol-converter-cli": "^1.1.0",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
+        "ts-node": "^10.9.2",
         "typescript": "~5.3.3"
     },
     "publishConfig": {
