--- a/packages/@textlint/text-to-ast/package.json
+++ b/packages/@textlint/text-to-ast/package.json
@@ -48,6 +48,7 @@
     "devDependencies": {
         "@textlint/ast-tester": "workspace:*",
         "@types/mocha": "^10.0.10",
+        "@types/node": "^18.19.9",
         "eol-converter-cli": "^1.1.0",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
