--- a/packages/@textlint/textlint-plugin-markdown/package.json
+++ b/packages/@textlint/textlint-plugin-markdown/package.json
@@ -47,6 +47,7 @@
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
         "textlint-rule-no-todo": "^2.0.1",
+        "ts-node": "^10.9.2",
         "typescript": "~5.3.3"
     },
     "publishConfig": {
