--- a/packages/@textlint/kernel/package.json
+++ b/packages/@textlint/kernel/package.json
@@ -58,6 +58,7 @@
         "rimraf": "^6.0.1",
         "shelljs": "^0.10.0",
         "ts-node": "^10.9.2",
-        "typescript": "~5.3.3"
+        "typescript": "~5.3.3",
+        "unist-util-select": "^3.0.4"
     }
 }
