--- a/packages/@textlint/textlint-plugin-markdown/package.json
+++ b/packages/@textlint/textlint-plugin-markdown/package.json
@@ -45,6 +45,7 @@
     "devDependencies": {
         "@textlint/kernel": "workspace:*",
         "@types/mocha": "^10.0.10",
+        "@types/node": "^22.10.6",
         "@types/react": "^18.3.18",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
