--- a/packages/@textlint/textlint-plugin-text/package.json
+++ b/packages/@textlint/textlint-plugin-text/package.json
@@ -40,6 +40,7 @@
     "devDependencies": {
         "@textlint/kernel": "workspace:*",
         "@types/mocha": "9.1.1",
+        "@types/node": "^20.0.0",
         "@types/react": "^18.3.18",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
