--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,11 +45,12 @@ jobs:
     if: always() && (needs.check.outputs.EXISTS_TAG == 'false')
     environment:
       name: npm
+    outputs:
+      version: ${{ steps.set_version.outputs.version }}
+      release-url: ${{ steps.create_release.outputs.release-url }}
+      released: ${{ steps.create_release.outputs.released }}
     permissions:
       contents: write
-      issues: write
-      pull-requests: write
-      packages: write
       id-token: write
     steps:
       - name: Checkout
@@ -75,7 +76,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Set PACKAGE_VERSION
-        run: echo "PACKAGE_VERSION=$(cat lerna.json | jq -r .version)" >> $GITHUB_ENV
+        id: set_version
+        run: |
+          VERSION=$(cat lerna.json | jq -r .version)
+          echo "PACKAGE_VERSION=$VERSION" >> $GITHUB_ENV
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
       - name: Install
         run: pnpm install
       - name: Build
@@ -97,18 +102,59 @@ jobs:
       - name: Create Release
         id: create_release
         run: |
-          gh release create "v${PACKAGE_VERSION}" \
+          RELEASE_URL=$(gh release create "v${PACKAGE_VERSION}" \
             --title "${GITHUB_EVENT_PULL_REQUEST_TITLE}" \
-            --notes "${GITHUB_EVENT_PULL_REQUEST_BODY}"
+            --notes "${GITHUB_EVENT_PULL_REQUEST_BODY}" \
+            --json url -q .url)
+          echo "release-url=$RELEASE_URL" >> $GITHUB_OUTPUT
+          echo "released=true" >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PACKAGE_VERSION: ${{ env.PACKAGE_VERSION }}
           GITHUB_EVENT_PULL_REQUEST_TITLE: ${{ github.event.pull_request.title }}
           GITHUB_EVENT_PULL_REQUEST_BODY: ${{ github.event.pull_request.body }}
-      - name: Comment on PR
+
+  comment:
+    needs: release
+    if: |
+      always() &&
+      github.event_name == 'pull_request' &&
+      needs.release.outputs.released == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+    steps:
+      - name: Comment on PR - Success
+        if: needs.release.result == 'success'
         run: |
-          gh pr comment ${{ github.event.pull_request.number }} \
-            --body "🎉 Release https://github.com/${{ github.repository }}/releases/tag/v${PACKAGE_VERSION}"
+          gh pr comment "$PR_NUMBER" \
+            --repo "$REPOSITORY" \
+            --body "✅ **Release v$VERSION completed successfully!**
+
+          - 🏷️ GitHub Release: $RELEASE_URL
+          - 🔗 Workflow run: $SERVER_URL/$REPOSITORY/actions/runs/$RUN_ID"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PACKAGE_VERSION: ${{ env.PACKAGE_VERSION }}
+          GH_TOKEN: ${{ github.token }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          VERSION: ${{ needs.release.outputs.version }}
+          RELEASE_URL: ${{ needs.release.outputs.release-url }}
+          SERVER_URL: ${{ github.server_url }}
+          REPOSITORY: ${{ github.repository }}
+          RUN_ID: ${{ github.run_id }}
+
+      - name: Comment on PR - Failure
+        if: needs.release.result == 'failure'
+        run: |
+          gh pr comment "$PR_NUMBER" \
+            --repo "$REPOSITORY" \
+            --body "❌ **Release v$VERSION failed**
+
+          Please check the workflow logs for details.
+          🔗 Workflow run: $SERVER_URL/$REPOSITORY/actions/runs/$RUN_ID"
+        env:
+          GH_TOKEN: ${{ github.token }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          VERSION: ${{ needs.release.outputs.version }}
+          SERVER_URL: ${{ github.server_url }}
+          REPOSITORY: ${{ github.repository }}
+          RUN_ID: ${{ github.run_id }}
